--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -7,7 +7,7 @@
              xmlns:utility="using:SerialLoops.Utility"
              x:DataType="vm:ScriptEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptEditorView">
-    <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto,*">
+    <Grid ColumnDefinitions="Auto,4,*" RowDefinitions="Auto,Auto,*">
         <StackPanel IsVisible="False">
             <Button Command="{Binding CutCommand}" HotKey="{Binding CutHotKey}"/>
             <Button Command="{Binding CopyCommand}" HotKey="{Binding CopyHotKey}"/>
@@ -15,7 +15,7 @@
             <Button Command="{Binding DeleteScriptCommandOrSectionCommand}" HotKey="{Binding DeleteHotKey}"/>
         </StackPanel>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Right" Orientation="Horizontal">
+        <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Center" Orientation="Horizontal">
             <Button Command="{Binding AddScriptCommandCommand}" HotKey="{Binding AddCommandHotKey}">
                 <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
             </Button>
@@ -33,7 +33,10 @@
                       AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop"
                       MaxWidth="300" Name="CommandTree">
         </TreeDataGrid>
-        <Grid Grid.Column="1" Grid.Row="1" ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto">
+
+        <GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Background="{StaticResource GroupLineColor}" ResizeDirection="Columns"/>
+
+        <Grid Grid.Column="2" Grid.Row="1" ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto">
             <Image Source="{Binding PreviewBitmap, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
                    Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Width="256"/>
             <TabControl Grid.Column="1" Grid.Row="0">
@@ -44,7 +47,7 @@
             </TabControl>
             <StackPanel Grid.Column="1" Grid.Row="1" />
         </Grid>
-        <ScrollViewer Grid.Column="1" Grid.Row="2">
+        <ScrollViewer Grid.Column="2" Grid.Row="2">
             <ContentPresenter Margin="10" DataContext="{Binding CurrentCommandViewModel}" Content="{Binding}"/>
         </ScrollViewer>
     </Grid>
