--- a/src/SerialLoops/Views/Panels/ItemExplorerPanel.axaml
+++ b/src/SerialLoops/Views/Panels/ItemExplorerPanel.axaml
@@ -21,11 +21,9 @@
             </TextBox>
             <Button Command="{Binding SearchProjectCommand}" Width="30" Height="30">...</Button>
         </StackPanel>
-        <TreeDataGrid Grid.Row="1" Margin="5" ShowColumnHeaders="False" CanUserResizeColumns="False" Name="Viewer" Source="{Binding Source}">
+        <TreeDataGrid Grid.Row="1" Margin="5" ShowColumnHeaders="False" CanUserResizeColumns="False" Name="Viewer" Source="{Binding Source}"
+                      KeyUp="Viewer_OnKeyUp">
             <i:Interaction.Behaviors>
-                <ia:EventTriggerBehavior EventName="KeyUp" SourceObject="{Binding #Viewer}">
-                    <ia:InvokeCommandAction Command="{Binding OpenItemCommand}" CommandParameter="{Binding #Viewer}"/>
-                </ia:EventTriggerBehavior>
                 <ia:EventTriggerBehavior EventName="DoubleTapped" SourceObject="{Binding #Viewer}">
                     <ia:InvokeCommandAction Command="{Binding OpenItemCommand}" CommandParameter="{Binding #Viewer}"/>
                 </ia:EventTriggerBehavior>
