--- a/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/UpdateAvailableDialog.axaml
@@ -9,6 +9,8 @@
         xmlns:assets="using:SerialLoops.Assets"
         xmlns:controls="using:SerialLoops.Controls"
         xmlns:md="using:Markdown.Avalonia"
+        xmlns:mdh="using:Markdown.Avalonia.Html"
+        xmlns:mdsh="using:Markdown.Avalonia.SyntaxHigh"
         MinWidth="{Binding MinSize.Width}"
         MinHeight="{Binding MinSize.Height}"
         Width="{Binding ClientSize.Width}"
@@ -24,7 +26,15 @@
         <controls:LabelWithIcon Text="{x:Static assets:Strings.A_new_update_for_Serial_Loops_is_available_}"
                                 Icon="Update" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left"/>
         <md:MarkdownScrollViewer Width="750" Height="350" Grid.Row="2" Grid.Column="0"
-                                 Markdown="{Binding Changelog}"/>
+                                 Markdown="{Binding Changelog}"
+                                 MarkdownStyleName="GithubLike">
+            <md:MarkdownScrollViewer.Plugins>
+                <md:MdAvPlugins>
+                    <mdh:HtmlPlugin/>
+                    <mdsh:SyntaxHighlight/>
+                </md:MdAvPlugins>
+            </md:MarkdownScrollViewer.Plugins>
+        </md:MarkdownScrollViewer>
         <controls:LinkButton Text="{x:Static assets:Strings.Download_release_from_GitHub}"
                     Grid.Row="3" Grid.Column="0" Command="{Binding OpenReleaseLinkCommand}"/>
         <StackPanel Grid.Row="5" Grid.Column="0" Orientation="Horizontal" Spacing="20">
