--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -2,10 +2,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:assets="using:SerialLoops.Assets"
              x:Class="SerialLoops.App"
-             xmlns:local="using:SerialLoops"
-             xmlns:tabaloniathemes="using:Tabalonia.Themes.Custom"
-             xmlns:mintoolbarthemes="using:MiniToolbar.Avalonia.Themes"
              xmlns:dialoghost="using:DialogHostAvalonia"
+             xmlns:local="using:SerialLoops"
+             xmlns:mintoolbarthemes="using:MiniToolbar.Avalonia.Themes"
+             xmlns:tabaloniathemes="using:Tabalonia.Themes.Custom"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
     <Application.DataTemplates>
@@ -30,8 +30,8 @@
         <dialoghost:DialogHostStyles />
         <tabaloniathemes:CustomTheme/>
         <mintoolbarthemes:MiniToolbarStyles/>
+        <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml"/>
         <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml"/>
-        <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
         <Style Selector="TextBlock.h1">
             <Setter Property="FontSize" Value="32"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -62,12 +62,14 @@
                     <SolidColorBrush x:Key="LinkColor">Blue</SolidColorBrush>
                     <SolidColorBrush x:Key="DisabledLinkColor">DarkGray</SolidColorBrush>
                     <SolidColorBrush x:Key="GroupLineColor">DarkGray</SolidColorBrush>
+                    <SolidColorBrush x:Key="AccentColor">#CCCCCC</SolidColorBrush>
                     <Color x:Key="CropResizeOverlayColor">#55000000</Color>
                 </ResourceDictionary>
                 <ResourceDictionary x:Key="Dark">
                     <SolidColorBrush x:Key="LinkColor">Cyan</SolidColorBrush>
                     <SolidColorBrush x:Key="DisabledLinkColor">Gray</SolidColorBrush>
                     <SolidColorBrush x:Key="GroupLineColor">WhiteSmoke</SolidColorBrush>
+                    <SolidColorBrush x:Key="AccentColor">#222222</SolidColorBrush>
                     <Color x:Key="CropResizeOverlayColor">#AAFFFFFF</Color>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
