--- a/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/ScriptEditorView.axaml
@@ -7,7 +7,13 @@
              xmlns:utility="using:SerialLoops.Utility"
              x:DataType="vm:ScriptEditorViewModel"
              x:Class="SerialLoops.Views.Editors.ScriptEditorView">
-    <Grid ColumnDefinitions="Auto,4,*" RowDefinitions="Auto,Auto,*">
+    <Grid RowDefinitions="Auto,Auto,*">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" MinWidth="250"/>
+            <ColumnDefinition Width="4"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
         <StackPanel IsVisible="False">
             <Button Command="{Binding CutCommand}" HotKey="{Binding CutHotKey}"/>
             <Button Command="{Binding CopyCommand}" HotKey="{Binding CopyHotKey}"/>
@@ -15,7 +21,7 @@
             <Button Command="{Binding DeleteScriptCommandOrSectionCommand}" HotKey="{Binding DeleteHotKey}"/>
         </StackPanel>
 
-        <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Center" Orientation="Horizontal">
+        <StackPanel Grid.Column="0" Grid.Row="0" Margin="5" Spacing="5" HorizontalAlignment="Left" Orientation="Horizontal">
             <Button Command="{Binding AddScriptCommandCommand}" HotKey="{Binding AddCommandHotKey}">
                 <Svg Path="avares://SerialLoops/Assets/Icons/Add.svg" Width="22"/>
             </Button>
@@ -30,8 +36,8 @@
             </Button>
         </StackPanel>
         <TreeDataGrid Grid.Column="0" Grid.Row="1" Grid.RowSpan="2" Source="{Binding Source}"
-                      AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop"
-                      MaxWidth="300" Name="CommandTree">
+                      ShowColumnHeaders="False" CanUserResizeColumns="False" Name="CommandTree"
+                      AutoDragDropRows="True" RowDragStarted="TreeDataGrid_OnRowDragStarted" RowDrop="TreeDataGrid_OnRowDrop">
         </TreeDataGrid>
 
         <GridSplitter Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Background="{StaticResource GroupLineColor}" ResizeDirection="Columns"/>
