--- a/src/SerialLoops/App.axaml
+++ b/src/SerialLoops/App.axaml
@@ -32,6 +32,23 @@
         <mintoolbarthemes:MiniToolbarStyles/>
         <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml"/>
         <StyleInclude Source="avares://Avalonia.Controls.TreeDataGrid/Themes/Fluent.axaml"/>
+
+        <!-- Toolbar styling -->
+        <Style Selector="Button.ToolbarButton">
+            <Setter Property="Width" Value="{DynamicResource ToolbarNormalHeight}" />
+            <Setter Property="Height" Value="{DynamicResource ToolbarNormalHeight}" />
+            <Setter Property="Padding" Value="5" />
+        </Style>
+        <Style Selector="Button.ToolbarButton > StackPanel > TextBlock">
+            <Setter Property="Padding" Value="0, 3" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="TextAlignment" Value="Center" />
+            <Setter Property="TextWrapping" Value="Wrap" />
+            <Setter Property="FontSize" Value="12.5" />
+        </Style>
+
+        <!-- Text styling -->
         <Style Selector="TextBlock.h1">
             <Setter Property="FontSize" Value="32"/>
             <Setter Property="FontWeight" Value="Bold"/>
@@ -63,6 +80,8 @@
                     <SolidColorBrush x:Key="DisabledLinkColor">DarkGray</SolidColorBrush>
                     <SolidColorBrush x:Key="GroupLineColor">DarkGray</SolidColorBrush>
                     <SolidColorBrush x:Key="AccentColor">#CCCCCC</SolidColorBrush>
+                    <SolidColorBrush x:Key="ToolbarBackgroundColor">Transparent</SolidColorBrush>
+                    <SolidColorBrush x:Key="ToolbarTextColor">DarkGray</SolidColorBrush>
                     <Color x:Key="CropResizeOverlayColor">#55000000</Color>
                 </ResourceDictionary>
                 <ResourceDictionary x:Key="Dark">
@@ -70,6 +89,8 @@
                     <SolidColorBrush x:Key="DisabledLinkColor">Gray</SolidColorBrush>
                     <SolidColorBrush x:Key="GroupLineColor">WhiteSmoke</SolidColorBrush>
                     <SolidColorBrush x:Key="AccentColor">#222222</SolidColorBrush>
+                    <SolidColorBrush x:Key="ToolbarBackgroundColor">Transparent</SolidColorBrush>
+                    <SolidColorBrush x:Key="ToolbarTextColor">Gray</SolidColorBrush>
                     <Color x:Key="CropResizeOverlayColor">#AAFFFFFF</Color>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
