--- a/src/SerialLoops/Views/Editors/MapEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/MapEditorView.axaml
@@ -63,7 +63,7 @@
                 </ItemsRepeater>
 
                 <!-- Background Layer -->
-                <ItemsControl ItemsSource="{Binding BgLayer}" IsVisible="{Binding BgLayerDisplayed}">
+                <ItemsControl ItemsSource="{Binding BgLayer}">
                     <ItemsControl.ItemsPanel>
                         <ItemsPanelTemplate>
                             <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
@@ -79,27 +79,7 @@
                         <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
                             <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
                             <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
-                        </Style>
-                    </ItemsControl.Styles>
-                </ItemsControl>
-
-                <!-- Background Object Layer -->
-                <ItemsControl ItemsSource="{Binding BgObjectLayer}" IsVisible="{Binding BgObjectLayerDisplayed}">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <Canvas Width="{Binding CanvasWidth}" Height="{Binding CanvasHeight}"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate DataType="models:LayoutEntryWithImage">
-                            <Image Source="{Binding CroppedImage, Converter={x:Static utility:SLConverters.SKBitmapToAvaloniaConverter}}"
-                                   Stretch="Fill" Width="{Binding Width}" Height="{Binding Height}"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.Styles>
-                        <Style Selector="ItemsControl > ContentPresenter" x:DataType="models:LayoutEntryWithImage">
-                            <Setter Property="(Canvas.Left)" Value="{Binding ScreenX}"/>
-                            <Setter Property="(Canvas.Top)" Value="{Binding ScreenY}"/>
+                            <Setter Property="IsVisible" Value="{Binding IsVisible}"/>
                         </Style>
                     </ItemsControl.Styles>
                 </ItemsControl>
